added the HTML markup

--- a/index.html
+++ b/index.html
@@ -8,6 +8,36 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Tic Tac Toe</h1>
+    </header>
+
+    <main>
+        <section class="player-turn">
+            Player <span class="which-player">X</span>'s turn
+        </section>
+        <section class="game-board">
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+        </section>
+        <section class="game-controls">
+            <button class="game-restart">
+                restart
+            </button>
+        </section>
+    </main>
+
+    <footer>
+        <a href="https://github.com/RakhmanIbrayev" target="_blank">
+            GitHub
+        </a>
+    </footer>
 </body>
 </html>
