fixed the font file path in .css file

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="flex column">
     <header>
-        <h1>Tic Tac Toe</h1>
+        <h1 class="text-extra-large text-center">Tic Tac Toe</h1>
     </header>
 
     <main>
-        <section class="player-turn">
+        <section class="player-turn text-medium text-center">
             Player <span class="which-player">X</span>'s turn
         </section>
         <section class="game-board">
@@ -34,8 +34,8 @@
         </section>
     </main>
 
-    <footer>
-        <a href="https://github.com/RakhmanIbrayev" target="_blank">
+    <footer class="text-center">
+        <a href="https://github.com/RakhmanIbrayev" target="_blank" class="text-medium">
             GitHub
         </a>
     </footer>
