finished the UI

--- a/index.html
+++ b/index.html
@@ -16,26 +16,44 @@
         <section class="player-turn text-medium text-center">
             Player <span class="which-player">X</span>'s turn
         </section>
-        <section class="game-board">
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
+        <section class="game-board grid">
+            <div class="box">
+                <div class="content flex center"></div>
+            </div>
+            <div class="box">
+                <div class="content flex center"></div>
+            </div>
+            <div class="box">
+                <div class="content flex center"></div>
+            </div>
+            <div class="box">
+                <div class="content flex center"></div>
+            </div>
+            <div class="box">
+                <div class="content flex center"></div>
+            </div>
+            <div class="box">
+                <div class="content flex center"></div>
+            </div>
+            <div class="box">
+                <div class="content flex center"></div>
+            </div>
+            <div class="box">
+                <div class="content flex center"></div>
+            </div>
+            <div class="box">
+                <div class="content flex center"></div>
+            </div>
         </section>
-        <section class="game-controls">
-            <button class="game-restart">
-                restart
+        <section class="game-controls flex center">
+            <button class="game-restart text-medium enlarge">
+                Restart
             </button>
         </section>
     </main>
 
     <footer class="text-center">
-        <a href="https://github.com/RakhmanIbrayev" target="_blank" class="text-medium">
+        <a href="https://github.com/RakhmanIbrayev" target="_blank" class="text-medium enlarge">
             GitHub
         </a>
     </footer>
