added hover effect for each box on the game board

--- a/index.html
+++ b/index.html
@@ -17,31 +17,31 @@
             Player <span class="which-player">X</span>'s turn
         </section>
         <section class="game-board grid">
-            <div class="box">
+            <div class="box change-background">
                 <div class="content flex center"></div>
             </div>
-            <div class="box">
+            <div class="box change-background">
                 <div class="content flex center"></div>
             </div>
-            <div class="box">
+            <div class="box change-background">
                 <div class="content flex center"></div>
             </div>
-            <div class="box">
+            <div class="box change-background">
                 <div class="content flex center"></div>
             </div>
-            <div class="box">
+            <div class="box change-background">
                 <div class="content flex center"></div>
             </div>
-            <div class="box">
+            <div class="box change-background">
                 <div class="content flex center"></div>
             </div>
-            <div class="box">
+            <div class="box change-background">
                 <div class="content flex center"></div>
             </div>
-            <div class="box">
+            <div class="box change-background">
                 <div class="content flex center"></div>
             </div>
-            <div class="box">
+            <div class="box change-background">
                 <div class="content flex center"></div>
             </div>
         </section>
