linked script files, named the divs inside each box's more specifically and added a section that shows which player is a winner

--- a/index.html
+++ b/index.html
@@ -14,37 +14,38 @@
 
     <main>
         <section class="player-turn text-medium text-center">
-            Player <span class="which-player">X</span>'s turn
+            Player <span class="which-player">x</span>'s turn
         </section>
         <section class="game-board grid">
             <div class="box change-background">
-                <div class="content flex center"></div>
+                <div class="box-content flex center"></div>
             </div>
             <div class="box change-background">
-                <div class="content flex center"></div>
+                <div class="box-content flex center"></div>
             </div>
             <div class="box change-background">
-                <div class="content flex center"></div>
+                <div class="box-content flex center"></div>
             </div>
             <div class="box change-background">
-                <div class="content flex center"></div>
+                <div class="box-content flex center"></div>
             </div>
             <div class="box change-background">
-                <div class="content flex center"></div>
+                <div class="box-content flex center"></div>
             </div>
             <div class="box change-background">
-                <div class="content flex center"></div>
+                <div class="box-content flex center"></div>
             </div>
             <div class="box change-background">
-                <div class="content flex center"></div>
+                <div class="box-content flex center"></div>
             </div>
             <div class="box change-background">
-                <div class="content flex center"></div>
+                <div class="box-content flex center"></div>
             </div>
             <div class="box change-background">
-                <div class="content flex center"></div>
+                <div class="box-content flex center"></div>
             </div>
         </section>
+        <section class="announce-winner text-medium text-center"></section>
         <section class="game-controls flex center">
             <button class="game-restart text-medium enlarge">
                 Restart
@@ -53,9 +54,13 @@
     </main>
 
     <footer class="text-center">
-        <a href="https://github.com/RakhmanIbrayev" target="_blank" class="text-medium enlarge">
+        <a href="https://github.com/RakhmanIbrayev" target="_blank" class="text-medium">
             GitHub
         </a>
     </footer>
+
+    <script src="js/gameBoard.js"></script>
+    <script src="js/player.js"></script>
+    <script src="js/game.js"></script>
 </body>
 </html>
