added toggle button that allows user to choose to play against computer

--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
         <section class="player-turn text-medium text-center">
             Player <span class="which-player">x</span>'s turn
         </section>
+        <section class="select-oponent flex column center">
+            <p class="text-medium">Play against computer</p>
+            <div class="button r" id="button-1">
+                <input type="checkbox" class="checkbox" />
+                <div class="knobs"></div>
+                <div class="layer"></div>
+            </div>
+        </section>
         <section class="game-board grid">
             <div class="box change-background">
                 <div class="box-content flex center"></div>
