--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             Player <span class="which-player">x</span>'s turn
         </section>
         <section class="select-oponent flex column center">
-            <p class="text-medium">Play against computer</p>
+            <div class="text-medium text-center">Play against computer</div>
             <div class="button r" id="button-1">
-                <input type="checkbox" class="checkbox" />
+                <input type="checkbox" class="checkbox"/>
                 <div class="knobs"></div>
                 <div class="layer"></div>
             </div>
