provide the correct link to github profile

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </main>
 
     <footer class="text-center">
-        <a href="https://github.com/RakhmanIbrayev" target="_blank" class="text-medium">
+        <a href="https://github.com/rakhman-ibrayev" target="_blank" class="text-medium">
             GitHub
         </a>
     </footer>
